@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Make the Pod::Weaver bits work when used from a subclass of this bundle.
+
+
 0.71     2016-09-17
 
 - Removed Module::Metadata prereq and require Test::Version 2.05 instead.
